# flight-scraper

./: Cargo.toml  README.md
src/: main.rs  scraper.rs
src/db/: api.rs
